Updating the website

--- a/views/pages/fun.ejs
+++ b/views/pages/fun.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = 'en'>
 
 <head>
   <% include ../partials/head %> 
-  <link rel="stylesheet" type="text/css" href="stylesheets/main.css"/>
-  <script src="/js/main.js"></script>
-</head>
+  <!--<link rel="stylesheet" type="text/css" href="stylesheets/main.css"/>-->
+  <!--<script src="/js/main.js"></script>-->
 
-<body>
+</head>
+<body class="container">
+
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <ul class="nav navbar-nav">
@@ -19,7 +20,15 @@
     </ul>
   </div>
   </nav>
-  <h1>My First Website!</h1>
+
+
+    <main>
+    <div class="jumbotron">
+      <h1>My First Website!</h1>
+      <p>Our first Web App</p>
+    </div>
+    <iframe src="//giphy.com/embed/15q5kw64NKg4E" width="480" height="213" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/life-15q5kw64NKg4E">via GIPHY</a></p>
+    </main>
 
   <p id="demo">
     This is me testing out a lil html file
