--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -22,9 +22,8 @@
   <h1>My First Website!</h1>
 
   <p id="demo">
-    This is me testing out a lil html file
+    This is my about page!
   </p>
-
 
 </body>
 
